# account/routes/usersRoutes.js
@@ -6,10 +6,10 @@ const router = express.Router();
 
 router
   .get('/api/admin/users', authBearer, UserController.listUsers)
-  .get('/api/users/:id', UserController.listUsersById)
-  .post('/api/admin/users', authBearer, UserController.addUsers)
+  .get('/api/users/:id', UserController.findUserById)
+  .post('/api/users', UserController.addUser)
   .post('/api/users/login', authLocal, UserController.userLogin)
-  .put('/api/admin/users/:id', authBearer, UserController.updateUsers)
-  .delete('/api/admin/users/:id', authBearer, UserController.deleteUsers);
+  .put('/api/admin/users/:id', authBearer, UserController.updateUser)
+  .delete('/api/admin/users/:id', authBearer, UserController.deleteUser);
 
 export default router;
